[package]
name = "th-ecdsa"
version = "0.1.0"


[lib]
crate-type = ["lib"]

[dependencies]
paillier = { git = "https://github.com/mortendahl/rust-paillier",  branch = "new_correct_key"}

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
features =  ["curvesecp256k1"]


[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[dev-dependencies]
criterion = "0.2"

