[package]
name = "th-ecdsa"
version = "0.1.0"


[lib]
crate-type = ["lib"]

[dependencies]
paillier = { git = "https://github.com/mortendahl/rust-paillier"}
zk-paillier = { git = "https://github.com/KZen-networks/zk-paillier"}

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.9.5"
rocket = "0.4.0"
rocket_contrib = "0.4.0"
uuid = { version = "0.7", features = ["v4"] }
rust-crypto = "^0.2"

[dependencies.curv]
features =  ["curvesecp256k1"]

[dependencies.centipede]

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[dev-dependencies]
criterion = "0.2"

