[package]
name = "sign_network"
version = "0.1.0"
authors = ["MoezGholami <Ali.Moez.Gholami@GMail.COM>"]
edition = "2018"

[[bin]]
name = "sm_manager"
path = "src/executables/sm_manager.rs"

[[bin]]
name = "gg18_keygen_client"
path = "src/executables/gg18_keygen_client.rs"

[[bin]]
name = "gg18_sign_client"
path = "src/executables/gg18_sign_client.rs"

[dependencies]
multi-party-ecdsa = { git = "https://github.com/KZen-networks/multi-party-ecdsa"}
paillier = { git = "https://github.com/KZen-networks/rust-paillier"}


hex = "0.3.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.9.5"
rocket = "0.4.0"
rocket_contrib = "0.4.0"
uuid = { version = "0.7", features = ["v4"] }
rust-crypto = "^0.2"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
features =  ["ec_secp256k1"]
